syntax = 'proto3';

package proto;

option go_package = '/proto';

enum ID {
  AllUserInfoPackageID = 0;
  AuthenticationIDPackageID = 1;
  BindPortPackageID = 2;
  ConfirmRegisterPackageID = 3;
  DeviceIDPackageID = 4;
  ForwardPackageID = 5;
  ServiceIDPackageID = 6;
  SwitchServiceIDPackageID = 7;
  AddOrUpdateDevicePackageID = 8;
  RemoveDevicePackageID = 9;
}

message AllUserInfoPackage {
  message UserData {
    string device_id = 1;
    int32 port = 2;
  }
  
  repeated UserData user_data_list = 1;
  repeated int32 reserved_ports = 2;
}

message AuthenticationIDPackage {
  int32 index = 1;
  string device_id = 2;
  string authentication_id = 3;
}

message BindPortPackage {
  int32 port = 1;
}

message ConfirmRegisterPackage {
  string device_id = 1;
  string authentication_id = 2;
}

message DeviceIDPackage {
  string device_id = 1;
}

message ForwardPackage {
  int32 port = 1;
  bytes bytes = 2;
}

message ServiceIDPackage {
  int32 index = 1;
  string service_id = 2;
  string public_key = 3;
}

message SwitchServiceIDPackage {
  int32 index = 1;
}

message AddOrUpdateDevicePackage {
  string device_id = 1;
  int32 port = 2;
}

message RemoveDevicePackage {
  string device_id = 1;
}
